<resources>
    <string name="app_name">eyeDo</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_result">Result</string>
    <string name="NotOptimizedFloat32">Not optimized - Float 32</string>
    <string name="NormalizedNotOptimizedFloat32">Normalized - Not optimized - Float 32</string>
    <string name="NNmodel">NN model</string>
    <string name="optimizedInt8">Optimized - Int 8</string>
    <string name="optimizedFloat32">Optimized - Float 32</string>
</resources>
