<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/NNmodel"
            android:textAlignment="gravity" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/nof32"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/NotOptimizedFloat32" />

            <RadioButton
                android:id="@+id/ptnof32"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/NormalizedNotOptimizedFloat32" />

            <RadioButton
                android:id="@+id/oi8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/optimizedInt8" />

            <RadioButton
                android:id="@+id/of32"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/optimizedFloat32" />
        </RadioGroup>
    </LinearLayout>


</ScrollView>